[build-system]
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[project]
name = "nbi_extension_example"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "notebook-intelligence==0.8.1",
    "matplotlib"
]
dynamic = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.targets.wheel.shared-data]
"extension.json" = "share/jupyter/nbi_extensions/nbi_extension_example/extension.json"

[tool.check-wheel-contents]
ignore = ["W002"]
